Bettwe touch targets.

--- a/css/core.less
+++ b/css/core.less
@@ -115,22 +115,6 @@ h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, 
   width:100%;
 }
 
-.btn {
-  border:1px solid #d4dbe3;
-  text-decoration:none;
-  color:#616568;
-  border-radius:0.2em;
-  text-transform:uppercase;
-  padding:0 0.72em;
-  text-decoration:none;
-  font-family:Calibri, Verdana, Arial, sans-serif;
-  font-weight:bolder;
-  font-size:14px;
-  cursor:pointer;
-  white-space:nowrap;
-  #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
-}
-
 .type-4, .type-3, .type-2, .type-1 {
   float:left;
   padding:1%;
@@ -202,6 +186,7 @@ h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, 
   a {
     color:#c00;
     text-decoration:none;
+    width:100%;
   }
 }
 
@@ -277,6 +262,9 @@ h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, 
   padding-top: 0 !important;
   text-transform: uppercase;
 }
+
+@import 'buttons.less';
+
 
 /* ========== content hiding ======================= */
 
