--- a/css/touch.less
+++ b/css/touch.less
@@ -1,9 +1,14 @@
 
 .touch_support() {
   .nav-main li a {
-    padding:5px 0;
+    padding-top:5px;
+    padding-bottom:5px;
   }
   .btn {
-    padding:5px 0;
+    padding:5px 1em;
+  }
+  #nav-secondary li a {
+    padding-top:10px;
+    padding-bottom:10px;
   }
 }
