--- a/css/900px.less
+++ b/css/900px.less
@@ -1,6 +1,6 @@
 ﻿.min-width_920px() {
   .nav-main li {
-    font-size:18px;
+    #percentage > .font-size(18, 12);
   }
   .home-link img {
     height:24px;
