--- a/css/700px.less
+++ b/css/700px.less
@@ -1,4 +1,9 @@
 ﻿.min-width_768px() {
+
+  #content {
+    font-size:12px;
+  }
+
   .logo {
     clear:both;
     margin-top:0;
@@ -12,7 +17,7 @@
       width:auto;
       min-width:0px;
       margin:20px .1em 0 .1em;
-      font-size:15px;
+      #percentage > .font-size(15, 12);
     }
   }
   .home-link { 
@@ -27,7 +32,7 @@
   }
   .keyline {
     clear:both;
-    font-size:9px;
+    font-size:10px;
     position:relative;
     top:-125px;
     float:right;
@@ -103,6 +108,8 @@
   .sec-col { width:30%; }
   
   #nav-secondary {
+    font-size:100%;
+    font-family:@copy-font;
     a {
       font-size:100%;
       display:inherit;
