--- a/css/buttons.less
+++ b/css/buttons.less
@@ -8,7 +8,7 @@
   text-decoration:none;
   font-family:Calibri, Verdana, Arial, sans-serif;
   font-weight:bolder;
-  font-size:14px;
+  #percentage > .font-size(14, 12);
   cursor:pointer;
   white-space:nowrap;
   #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
