--- a/css/core.less
+++ b/css/core.less
@@ -17,16 +17,42 @@
 // Internot Exploder
 @import 'ie.less';
 
+@copy-font: Verdana, Arial, sans-serif;
+@brand-font: Calibri, Helvetica, Arial ,sans-serif;
+
 * {
   .transition(width 0.2s ease)
 }
 
 body {
   color: #000066;
-  font-family:Verdana,Arial,sans-serif;
+  font-family:@copy-font;
 }
 
-h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, Helvetica, Arial ,sans-serif; line-height: 1; color:#0051a3; margin:0; padding:0;}
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  font-family: @brand-font;
+  line-height: 1;
+  color:#0051a3;
+  padding:0;
+  margin:0 0 0.5em 0;
+}
+
+h1 {
+  font-size:3em;
+}
+h2 {
+  font-size:2.5em;
+}
+h3 {
+  font-size:2em;
+}
+h4 {
+  font-size:1.5em;
+}
+h5 {
+  font-size:1.25em;
+}
 
 .wrapper {
   width: 87.5%;/* 280/320 */
@@ -115,6 +141,15 @@ h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, 
   width:100%;
 }
 
+.panel {
+  p, li {
+    margin-bottom:0.5em;
+  }
+  li {
+    margin-left:1em;
+  }
+}
+
 .type-4, .type-3, .type-2, .type-1 {
   float:left;
   padding:1%;
@@ -158,6 +193,11 @@ h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, 
   }
 }
 
+.cta li {
+  list-style-type:none;
+  margin:0;
+}
+
 .supplimental .item {
   clear:both;
 }
@@ -176,7 +216,6 @@ h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, 
 
 
 .menu li{
-  font-size:75%;
   margin-bottom:1em;
   padding-left:1.2em;
   color:#c00;
@@ -193,7 +232,6 @@ h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, 
 .aside .item {
   padding:0 1%;
   a {
-    font-size:75%;
     color:#c00;
     text-decoration:none;
   }
@@ -216,19 +254,20 @@ h1, h2, h3, h4, h5, h6 {  font-weight: bold; font-family: /* Brand,  */Calibri, 
   margin-left: 6px;
   margin-right: 6px;
   padding-top: 6px;
-  font-size:75%;
+  font-family: @brand-font;
+  font-size:125%;
   li {
     clear: both;
     color: #CC0000;
     display: block;
     font-weight: bold;
     margin-bottom: 0;
+    margin-left:0;
     padding-bottom: 10px;
   }
   a {
     text-decoration:none;
     color:#0051A3;
-    font-size:125%;
     display:block;
     border:1px solid #D4DBE3;
     #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
