--- a/css/mixins.less
+++ b/css/mixins.less
@@ -7,8 +7,8 @@
     filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=1)",@start,@stop)); // IE6 & IE7
     -ms-filter: %("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=1)",@start,@stop); // IE8+
     background-image: -moz-linear-gradient(center top, @start 0%, @stop 100%);
-    background-image: -o-linear-gradient(@start, @stop);
-    background-image: linear-gradient(@start, @stop);
+    background-image: -o-linear-gradient(center top, @start, @stop);
+    background-image: linear-gradient(center top, @start, @stop);
   }
   .linear-double(@color, @start: #EEE, @stop: #FFF){
     background-color: @color;
@@ -18,8 +18,8 @@
     filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=1)",@start,@stop)); // IE6 & IE7
     -ms-filter: %("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=1)",@start,@stop); // IE8+
     background-image: -moz-linear-gradient(center top, @start 0%, @stop 100%);
-    background-image: -o-linear-gradient(@start, @start, @stop, @stop);
-    background-image: linear-gradient(@start, @start, @stop, @stop);
+    background-image: -o-linear-gradient(center top, @start, @start, @stop, @stop);
+    background-image: linear-gradient(center top, @start, @start, @stop, @stop);
   }
   .clear() {
     background-color: transparent;
@@ -52,4 +52,13 @@
   -moz-transition:@arguments;
   -o-transition:@arguments;
   transition:@arguments;
+}
+
+#percentage {
+  .width(@numerator, @denominator: 100) {
+    width:@numerator / @denominator * 100%;
+  }
+  .font-size(@numerator, @denominator: 100) {
+    font-size:@numerator / @denominator * 100%;
+  }
 }
