Improved touch targets and less regeneration.

--- a/css/core.less
+++ b/css/core.less
@@ -237,12 +237,21 @@ h5 {
   }
 }
 
-.footer .nav li {
-  float:left;
-  border:1px solid #d5d9df;
-  width:45%;
-  padding:1em 2%;
-  margin:0;
+
+.footer {
+  .nav {
+    li {
+      float:left;
+      border:1px solid #d5d9df;
+      width:45%;
+      padding:1em 2%;
+      margin:0;
+      text-decoration:none;
+    }
+    a {
+      text-decoration:none;
+    }
+  }
 }
 
 .copyright {
