--- a/css/touch.less
+++ b/css/touch.less
@@ -1,8 +1,12 @@
 
 .touch_support() {
-  .nav-main li a {
-    padding-top:5px;
-    padding-bottom:5px;
+  .nav-main li {
+    a {
+    padding-top:10px;
+    padding-bottom:10px;
+    }
+    margin-top:5px;
+    margin-bottom:5px;
   }
   .btn {
     padding:5px 1em;
