Improvements to typography.

--- a/css/1200px.less
+++ b/css/1200px.less
@@ -1,6 +1,6 @@
 ﻿.min-width_1200px() {
   .nav-main li {
-    #percentage > .font-size(24, 12);
+    font-size:24px;
   }
   .home-link img {
     height:32px;
