--- a/css/1000px.less
+++ b/css/1000px.less
@@ -1,6 +1,6 @@
 ﻿.min-width_1000px() {
   .nav-main li {
-    #percentage > .font-size(20, 12);
+    font-size:20px;
   }
   .home-link img {
     height:28px;
