--- a/css/core.less
+++ b/css/core.less
@@ -161,7 +161,7 @@ h5 {
 }
 
 .wrap {
-  padding:5%;
+  padding:1em 5%;
   display:inline-block;
   width:90%;
 }
@@ -187,7 +187,6 @@ h5 {
     float:right;
     width:24%;
     max-width:100%;
-    margin-top:1em;
     margin-right:1%;
   }
 }
