Improved visual stylings.

--- a/css/400px.less
+++ b/css/400px.less
@@ -6,4 +6,16 @@
   #metafaq .question select {
     width:50%;
   }
+  .img {
+    .content {
+      float:left;
+      width:74%;
+      padding-right:1%;
+    }
+    img {
+      float:right;
+      width:24%;
+      max-width:100%;
+    }
+  }
 }
