--- a/css/700px.less
+++ b/css/700px.less
@@ -1,9 +1,14 @@
 ﻿.min-width_768px() {
 
-  #content {
+  #content, table {
     font-size:12px;
   }
 
+  .offset {
+    overflow:visible;
+    margin-top:100px;
+  }
+  
   .logo {
     clear:both;
     margin-top:0;
@@ -14,6 +19,7 @@
     top:76px;
     margin-left:3%;
     li {
+      font-size:16px;
       width:auto;
       min-width:0px;
       margin:20px .1em 0 .1em;
