--- a/css/core.less
+++ b/css/core.less
@@ -55,11 +55,36 @@ h5 {
 }
 
 .wrapper {
-  width: 87.5%;/* 280/320 */
+  #percentage > .width(280, 320);
   min-width:280px;
   max-width:1060px;
   margin:0 auto;
   padding:0;
+}
+
+.offset {
+  background:#f2f5f8;
+  overflow:hidden;
+  border-top:1px solid #d5d9df;
+  border-bottom:1px solid #d5d9df;
+  padding-top:5px;
+  .bdr-1, .bdr-2, .bdr-3, .bdr-4 {
+    #border > .shadow(1px 1px 2px #d6dde7);
+  }
+  .bg {
+    background:white;
+    .wrap {
+      #gradient > .clear;
+    }
+  }
+  ul.tabs li {
+    #border > .shadow(2px 2px 2px #d6dde7);
+  }
+}
+
+.offset-inner {
+  overflow: hidden;
+  width: 100%;
 }
 
 .logo {
@@ -78,7 +103,7 @@ h5 {
     margin:.1em .1em;
     border:1px solid #d4dbe3;
     text-decoration:none;
-    border-radius:0.2em;
+    #border > .radius(0.2em);
     padding:0 0.72em;
     text-decoration:none;
     font-family:Calibri, Verdana, Arial, sans-serif;
@@ -178,16 +203,8 @@ h5 {
 }
 
 .img {
-  .content {
-    float:left;
-    width:74%;
-    padding-right:1%;
-  }
   img {
-    float:right;
-    width:24%;
     max-width:100%;
-    margin-right:1%;
   }
 }
 
@@ -279,7 +296,7 @@ h5 {
     border:1px solid #D4DBE3;
     #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
     padding:0.25em;
-    border-radius:0.2em;
+    #border > .radius(0.2em);
   }
   .sub-level {
     margin-top:8px;
@@ -309,7 +326,55 @@ h5 {
   text-transform: uppercase;
 }
 
+/* Tabs */
+ul.tabs { 
+  padding: 10px 0 0 0 !important;
+  margin: 0 0 0 10px;
+  float: left;
+  li { 
+    list-style-type:none;
+    float: left; padding: 0; margin: 0 10px 0 0;
+    background-image: none;
+    border: 1px solid #dadada; 
+    border-bottom:0;
+    #border > .radius(4px 4px 0 0);
+    a { 
+      font-family: Arial,Helvetica,sans-serif; 
+      display: block !important;
+      width: auto; 
+      padding: 10px 10px; 
+      border: 4px solid #fff; 
+      border-bottom: 0;
+      color:#006; 
+      text-decoration: none;
+      #border > .radius(4px 4px 0 0);
+    }
+    &.current {
+      a {
+        background: white;
+      }
+      div { 
+        background: white ; z-index: 200;
+      }
+    }
+    div { 
+      background: #fff; 
+      border-left: 4px solid #fff; 
+      border-right: 4px solid #fff; 
+      padding: 0 10px; height: 9px;  
+      position: relative; 
+      bottom: -5px; 
+      margin-top: -5px;
+      z-index: -10;
+    }
+  }
+ 
+}
+
+
 @import 'buttons.less';
+
+@import 'tables.less';
 
 
 /* ========== content hiding ======================= */
