Width sensiteve tabs and added apply intersticial.

--- a/css/core.less
+++ b/css/core.less
@@ -371,6 +371,24 @@ ul.tabs {
  
 }
 
+.elh li {
+  width:49%;
+  float:left;
+  margin-left:0;
+}
+
+.js .panes {
+  display:none;
+  h2 {
+    border:1px solid #d4dbe3;
+    #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
+    clear:both;
+    padding-left:1em;
+    width:90%;
+    #border > .shadow(1px 1px 2px #d6dde7);
+  }
+}
+
 
 @import 'buttons.less';
 
