--- a/css/buttons.less
+++ b/css/buttons.less
@@ -2,7 +2,7 @@
   border:1px solid #d4dbe3;
   text-decoration:none;
   color:#616568;
-  border-radius:0.2em;
+  #border > .radius(0.2em);
   text-transform:uppercase;
   padding:0 0.72em;
   text-decoration:none;
