Changed metafaq placement in content-page, added some tab indices.

--- a/css/core.less
+++ b/css/core.less
@@ -17,6 +17,12 @@
 // Internot Exploder
 //@import 'ie.less';
 
+
+// Tab order testing.
+:focus {
+  outline:1px solid orange;
+}
+
 * {
   .transition(width 0.2s ease)
 }
