Added car insurance section "as-is"

--- a/css/core.less
+++ b/css/core.less
@@ -291,6 +291,11 @@ h5 {
     margin-bottom: 0;
     margin-left:0;
     padding-bottom: 10px;
+    &.divide {
+      border-bottom: 1px solid #CCCCCC;
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+    }
   }
   a {
     text-decoration:none;
