--- a/css/700px.less
+++ b/css/700px.less
@@ -4,9 +4,14 @@
     font-size:12px;
   }
 
+  .header {
+    overflow:hidden;
+  }
+  
   .offset {
     overflow:visible;
-    margin-top:100px;
+    margin-top:-50px;
+    margin-bottom:5px;
   }
   
   .logo {
@@ -16,7 +21,7 @@
   
   .nav-main {
     position:absolute;
-    top:94px;
+    top:76px;
     margin-left:3%;
     li {
       font-size:16px;
@@ -75,7 +80,6 @@
   }
   .split-30 {
     width:27%;
-    margin-left:2%;
   }
   .split-50 {
     width:50%;
@@ -110,7 +114,7 @@
     overflow:hidden;
   }
   .footer .nav li {
-    width:15.6%;
+    width:19.6%;
     font-size:66%;
   }
   .sec-col { width:30%; }
@@ -124,9 +128,6 @@
       border:0;
       #gradient > .clear;
       padding:0;
-    }
-    li {
-      padding-left: 14px;
     }
   }
 
