Added in test page with JS UI elements.

--- a/css/core.less
+++ b/css/core.less
@@ -324,7 +324,7 @@ a {
   position: relative;
 }
 
-.js .read-more div.readMoreContent, .js .rmc, .js .convert, .dev, .js .simple_overlay, .js .products-carousel .product {
+.js .read-more div.readMoreContent, .js .rmc, .js .convert, .dev, .js .simple_overlay, .js .products-carousel .product, #success {
   display: none;
 }
 
