pdates to alignments and break type-X above panel.

--- a/css/1000px.less
+++ b/css/1000px.less
@@ -1,6 +1,9 @@
 ﻿.min-width_1000px() {
   .nav-main li {
     font-size:20px;
+    &.active {
+    	padding-bottom:12px;
+    }
   }
   .home-link img {
     height:28px;
