--- a/css/900px.less
+++ b/css/900px.less
@@ -1,6 +1,9 @@
 ﻿.min-width_920px() {
   .nav-main li {
     font-size:18px;
+    &.active {
+      padding-bottom:10px;
+    }
   }
   .home-link img {
     height:24px;
@@ -19,14 +22,6 @@
     }
     .content {
       width:65%;
-    }
-  }
-  .type-3 {
-    img{
-      width:23%;
-    }
-    .content {
-      width:75%;
     }
   }
   .fireplace {
