--- a/css/buttons.less
+++ b/css/buttons.less
@@ -13,3 +13,7 @@
   #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
   display:inline-block;
 }
+
+.sprite img { //collapse old buttons to a small height for dev.
+  height:2em;
+}
