--- a/css/1200px.less
+++ b/css/1200px.less
@@ -1,6 +1,9 @@
 ﻿.min-width_1200px() {
   .nav-main li {
     font-size:24px;
+    &.active {
+    	padding-bottom:11px;
+    }
   }
   .home-link img {
     height:32px;
