--- a/css/core.less
+++ b/css/core.less
@@ -68,6 +68,9 @@ a {
   margin:0 auto;
   padding:0;
 }
+.split {
+  width:100%;
+}
 
 .offset {
   background:#f2f5f8;
@@ -106,7 +109,7 @@ a {
   padding:0px;
   li {
     float:left;
-    width:90%;
+    width:100%;
     margin:.1em .1em;
     border:1px solid #d4dbe3;
     text-decoration:none;
@@ -179,7 +182,7 @@ a {
   }
 }
 
-.type-4, .type-3, .type-2, .type-1 {
+.type-4 .panel, .type-3 .panel, .type-2 .panel, .type-1 .panel {
   float:left;
   padding:1%;
   width:95%;
@@ -209,6 +212,9 @@ a {
 
 .img {
   img {
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
     max-width:100%;
   }
 }
@@ -275,7 +281,6 @@ a {
 }
 
 .copyright {
-  font-size:66%;
   padding:1em 0;
 }
 
