Remove width 100% from footer nav menu anchors to remove overspill border. (block will fill out parent)

--- a/css/core.less
+++ b/css/core.less
@@ -247,7 +247,6 @@ a {
   a {
     color:#c00;
     text-decoration:none;
-    width:100%;
     &:before {
       content: "\00BB \0020";
     }
@@ -275,7 +274,7 @@ a {
     a {
       display:block;
       text-decoration:none;
-      padding:1em 0 1em 5%;
+      padding:6% 0 6% 6%;
     }
   }
 }
