Updated 768 layout proportios

--- a/css/900px.less
+++ b/css/900px.less
@@ -24,6 +24,33 @@
       width:65%;
     }
   }
+  .type-3 {
+    img{
+      #percentage > .width(340, 723);
+    }
+    .content {
+      #percentage > .width(360, 723);
+    }
+    .wrap {
+      padding-left:3%;
+      padding-right:3%;
+      width:94%;
+    }
+  }
+  .type-4 {
+    .wrap {
+      padding-left:7%;
+      padding-right:7%;
+    }
+  }
+  .main-col {
+    float:right;
+    width:79%;
+  }
+  .sec-col {
+    float:left;
+    width:21%;
+  }
   .fireplace {
     .split-70 {
       width:70%;
