Sorting type-4 for tablet.

--- a/css/700px.less
+++ b/css/700px.less
@@ -3,7 +3,21 @@
   body, table {
     font-size:12px;
   }
-
+  h1 {
+    font-size:3em;
+  }
+  h2 {
+    font-size:2.5em;
+  }
+  h3 {
+    font-size:2em;
+  }
+  h4 {
+    font-size:1.5em;
+  }
+  h5 {
+    font-size:1.25em;
+  }
   .header {
     overflow:hidden;
   }
@@ -88,9 +102,6 @@
   .split-30 {
     width:26%;
   }
-  .split-50 {
-    width:49.3%;
-  }
   .split-70 {
     width:70%;
   }
@@ -107,6 +118,12 @@
     }
   }
   
+  .type-1 .nav .wrap {
+    padding-left:5%;
+    padding-right:5%;
+    width:90%;
+  }
+
   #sidebar {
     float:right;
   }
