--- a/css/core.less
+++ b/css/core.less
@@ -42,19 +42,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size:3em;
-}
-h2 {
   font-size:2.5em;
 }
-h3 {
+h2 {
   font-size:2em;
 }
+h3 {
+  font-size:1.75em;
+}
 h4 {
-  font-size:1.5em;
+  font-size:1.25em;
 }
 h5 {
-  font-size:1.25em;
+  font-size:1.1em;
 }
 
 a {
@@ -187,6 +187,11 @@ a {
   padding:1%;
   width:95%;
   margin:0 0 1em 0;
+}
+.type-1 .nav .wrap {
+  padding-left:0;
+  padding-right:0;
+  width:100%;
 }
 
 .bdr-1, .bdr-2, .bdr-3, .bdr-4 {
