--- a/css/touch.less
+++ b/css/touch.less
@@ -9,7 +9,9 @@
     margin-bottom:5px;
   }
   .btn {
-    padding:5px 1em;
+    margin-top:10px;
+    margin-bottom:10px;
+    padding:10px 1em;
   }
   #nav-secondary li a {
     padding-top:10px;
