--- a/css/900px.less
+++ b/css/900px.less
@@ -32,34 +32,35 @@
       #percentage > .width(360, 723);
     }
     .wrap {
-      padding-left:3%;
-      padding-right:3%;
-      width:94%;
     }
   }
-  .type-4 {
-    .wrap {
-      padding-left:7%;
-      padding-right:7%;
+  .main-col { 
+    .type-1 .panel {
+      #percentage > .padding-horizontal(10, 220);
     }
-  }
-  .main-col {
-    float:right;
-    width:79%;
-  }
-  .sec-col {
-    float:left;
-    width:21%;
+    .type-2 .panel{
+      #percentage > .padding-horizontal(10, 440);
+    }
+    .type-3 .panel{
+      #percentage > .padding-horizontal(10, 700);
+    }
+    .type-4 .panel {
+      #percentage > .padding-horizontal(10, 340);
+    }
   }
   .split-50 {
-    width:49.3%;
+    #percentage > .width(340, 700);
+  }
+  .columns .left {
+    #percentage > .margin-right(20, 700);
   }
   .fireplace {
     .split-70 {
-      width:70%;
+      #percentage > .width(440, 680);
+      #percentage > .margin-right(20, 680);
     }
     .split-30 {
-      width:28%;
+      #percentage > .width(220, 680);
     }
   }
   .elh li {
