--- a/css/mixins.less
+++ b/css/mixins.less
@@ -64,4 +64,14 @@
   .font-size(@numerator, @denominator: 100) {
     font-size:@numerator / @denominator * 100%;
   }
+  .margin-left(@numerator, @denominator: 100) {
+    margin-left:@numerator / @denominator * 100%;
+  }
+  .margin-right(@numerator, @denominator: 100) {
+    margin-right:@numerator / @denominator * 100%;
+  }
+  .padding-horizontal(@numerator, @denominator: 100) {
+    padding-left:@numerator / @denominator * 100%;
+    padding-right:@numerator / @denominator * 100%;
+  }
 }
