Updated left nav.

--- a/css/core.less
+++ b/css/core.less
@@ -293,9 +293,6 @@ a {
 }
 
 #nav-secondary {
-  margin-left: 6px;
-  margin-right: 6px;
-  padding-top: 6px;
   font-family: @brand-font;
   font-size:125%;
   li {
@@ -305,24 +302,15 @@ a {
     font-weight: bold;
     margin-bottom: 0;
     margin-left:0;
-    padding-bottom: 10px;
-    &.divide {
-      border-bottom: 1px solid #CCCCCC;
-      margin-bottom: 10px;
-      padding-bottom: 10px;
-    }
+    padding: 10px 0;
   }
   a {
     text-decoration:none;
-    //color:#0051A3;
     display:block;
     border:1px solid #D4DBE3;
     #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
     padding:0.25em;
     #border > .radius(0.2em);
-  }
-  .sub-level {
-    margin-top:8px;
   }
 }
 
