--- a/css/700px.less
+++ b/css/700px.less
@@ -153,6 +153,14 @@
   #nav-secondary {
     font-size:100%;
     font-family:@copy-font;
+    li {
+      font-weight:normal;
+      padding: 10px 20px;
+      border-bottom: 1px solid #CCCCCC;
+      &:last-child {
+        border:0px solid;
+      }
+    }
     a {
       font-size:100%;
       display:inherit;
