Move keyline inside CSSO for positioning (possibly rename in future), position CSSO absolute relative to top right corner.

--- a/css/700px.less
+++ b/css/700px.less
@@ -20,12 +20,11 @@
   }
   .header {
     overflow:hidden;
+    position:relative;
   }
   
   .offset {
     overflow:visible;
-    margin-top:-50px;
-    margin-bottom:5px;
   }
   
   .logo {
@@ -62,12 +61,8 @@
     }
   }
   .keyline {
-    clear:both;
     font-size:10px;
-    position:relative;
-    top:-125px;
-    float:right;
-    padding-top:3px;
+    list-style:none;
     li {
       float:left;
       padding:0 .5em;
@@ -75,11 +70,10 @@
   }
   .logo { padding-top:40px; float:left;}
   .csso{ 
-    float:right;
-    position:relative;
+    position:absolute;
     padding:0;
-    top:-120px;
-    clear:right;
+    top:0;
+    right:0;
   }
   .register { float:right; }
     .supplimental .item {
