Reset nav li margins on larger screens, fix positioning to work with fixed min-height, change logo padding to margin, reduce nav fonts by 2px at each step (need to further test on ipad).

--- a/css/700px.less
+++ b/css/700px.less
@@ -29,19 +29,18 @@
   }
   
   .logo {
-    clear:both;
-    margin-top:0;
+    margin-top:40px;
+    float:left;
   }
   
   .nav-main {
     position:absolute;
-    top:68px;
-    margin-left:3%;
+    top:120px;
+    margin-left:35px;
     li {
-      font-size:16px;
+      font-size:14px;
       width:auto;
-      min-width:0px;
-      margin:20px .1em 0 .1em;
+      margin:0 10px 0 0;
       &.active {
         border-bottom:none;
         padding-bottom:11px;
@@ -51,12 +50,9 @@
     }
   }
   .home-link { 
-    clear:left;
-    float:left;
-    margin-top:13px; 
-    margin-bottom:8px;
-    position:static;
-    margin-left:0;
+    left: 0;
+    margin-left: 0;
+    top: 120px;
     img {
       height:22px;
     }
@@ -69,7 +65,6 @@
       padding:0 .5em;
     }
   }
-  .logo { padding-top:40px; float:left;}
   .csso{ 
     position:absolute;
     padding:0;
