Floats and margins on nav main li, overflow hidden on csso and spacing on mobile view.

--- a/css/600px.less
+++ b/css/600px.less
@@ -1,6 +1,8 @@
 ﻿.min-width_660px() {
   .nav-main li {
     width:48%;
+    float:left;
+    margin-right:5px;
   }
   .wide-1 {
     display:inherit !important;
