--- a/css/core.less
+++ b/css/core.less
@@ -108,10 +108,9 @@ a {
 
 .nav-main {
   padding:0px;
+  overflow:hidden;
   li {
-    float:left;
-    width:100%;
-    margin:.1em .1em;
+    margin:5px 0;
     border:1px solid #d4dbe3;
     text-decoration:none;
     #border > .radius(0.2em);
@@ -122,7 +121,7 @@ a {
     #gradient > .linear-double(#f2f5f8, #f2f5f8, #e5eaf1);
     a {
       display:block;
-      padding:0 0.72em;
+      padding:0 10px;
       text-decoration:none;
       color:#004ca0;
     }
@@ -136,8 +135,8 @@ a {
 }
 
 .csso {
-  padding-top:.75em;
-  clear:both;
+  margin:20px 0;
+  overflow:hidden;
 }
 
 #login {
