First pass on styling CSSO and keyline link list.

--- a/css/core.less
+++ b/css/core.less
@@ -102,10 +102,6 @@ a {
   margin-top:1em;
 }
 
-#login{
-  clear:both;
-}
-
 .nav-main {
   padding:0px;
   overflow:hidden;
@@ -140,14 +136,20 @@ a {
 }
 
 #login {
-  font-size:75%;
+  background-color:#f2f5f8;
+  padding:5px;
+  margin:10px 0;
+  line-height:18px;
+  #border > .radius(0.2em);
+  border: 1px solid #D5D9DF;
   label {
-    margin-bottom:0.25em;
+    font-family: @brand-font;
+    font-size:1.5em;
+    display:block;
   }
 }
 
 #csso-login {
-  margin-bottom:0.25em;
   max-width:140px;
 }
 
