--- a/css/700px.less
+++ b/css/700px.less
@@ -58,7 +58,9 @@
     }
   }
   .keyline {
-    font-size:10px;
+    font-size:11px;
+    line-height:22px;
+    overflow:hidden;
     list-style:none;
     li {
       float:left;
@@ -72,8 +74,17 @@
     right:0;
     margin:0;
   }
-  .register { float:right; }
-    .supplimental .item {
+  #login {
+  float:right;
+  label {
+    display:inline;
+  }
+}
+  .register {
+    float:right;
+    clear:right;
+  }
+  .supplimental .item {
     clear:none;
   }
   .all-products {
