--- a/css/ie.less
+++ b/css/ie.less
@@ -24,9 +24,14 @@
   width:900px;
   margin-left:30px;
 }
-body {
-  //background-color:red;
+
+.ie7 {
+  #metafaq {
+    margin-top:30px;
+  }
 }
+
+
 
 #fullsite, #relaxfull { display:none; }
 
