--- a/css/core.less
+++ b/css/core.less
@@ -110,7 +110,7 @@ a {
   padding:0px;
   li {
     float:left;
-    width:100%;
+    #percentage > .width(278, 280);
     margin:.1em .1em;
     border:1px solid #d4dbe3;
     text-decoration:none;
@@ -221,7 +221,7 @@ a {
     display:block;
     margin-left:auto;
     margin-right:auto;
-    max-width:100%;
+    max-width:250px; // Stops wide images causing container to overflow images.
   }
 }
 
@@ -395,7 +395,7 @@ ul.tabs {
     #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
     clear:both;
     padding-left:1em;
-    width:90%;
+    cursor:pointer;
     #border > .shadow(1px 1px 2px #d6dde7);
   }
 }
