font sizes on the nav at all breakpoints

--- a/css/700px.less
+++ b/css/700px.less
@@ -1,7 +1,8 @@
 ﻿.min-width_768px() {
 
   body, table {
-    font-size:12px;
+    font-size: 75%;
+    line-height: 1.5em;
   }
   h1 {
     font-size:3em;
@@ -38,7 +39,7 @@
     top:120px;
     margin-left:35px;
     li {
-      font-size:14px;
+      font-size:1.3333em;
       width:auto;
       margin:0 10px 0 0;
       &.active {
