--- a/css/core.less
+++ b/css/core.less
@@ -117,7 +117,7 @@ a {
     #gradient > .linear-double(#f2f5f8, #f2f5f8, #e5eaf1);
     a {
       display:block;
-      padding:0 10px;
+      padding:5px 10px;
       text-decoration:none;
       color:#004ca0;
     }
@@ -154,7 +154,7 @@ a {
 }
 
 .register {
-  font-size:75%;
+  font-size:0.6875em;
   margin-bottom:0.25em;
 }
 
