margin right on main nav, font size on register, first pass at button styles (todo: triple mixin gradients), white keyline on main nav anchors, margin on login, change .wrap width 100% to width auto, apply touch classes only to buttons in #maincontent, new button class login, upload new logo.

--- a/css/700px.less
+++ b/css/700px.less
@@ -42,6 +42,9 @@
       font-size:1.3333em;
       width:auto;
       margin:0 10px 0 0;
+      &:last-child {
+        margin:0;
+      }
       &.active {
         border-bottom:none;
         padding-bottom:11px;
@@ -84,6 +87,7 @@
   .register {
     float:right;
     clear:right;
+    font-size:0.91667em;
   }
   .supplimental .item {
     clear:none;
