--- a/css/core.less
+++ b/css/core.less
@@ -120,6 +120,7 @@ a {
       padding:5px 10px;
       text-decoration:none;
       color:#004ca0;
+      border:1px solid #fff;
     }
   }
 }
@@ -138,7 +139,7 @@ a {
 #login {
   background-color:#f2f5f8;
   padding:5px;
-  margin:10px 0;
+  margin:15px 0;
   line-height:18px;
   #border > .radius(0.2em);
   border: 1px solid #D5D9DF;
@@ -203,7 +204,7 @@ a {
 
 .wrap {
   display:inline-block;
-  width:100%;
+  width:auto;
 }
 
 .bg .wrap {
