--- a/css/buttons.less
+++ b/css/buttons.less
@@ -1,19 +1,29 @@
 ﻿.btn {
-  border:1px solid #d4dbe3;
+  border:1px solid #000;
   text-decoration:none;
-  color:#616568;
-  #border > .radius(0.2em);
+  color:#fff;
+  #border > .radius(0.1em);
   text-transform:uppercase;
-  padding:0 0.72em;
+  padding:4px 8px;
   text-decoration:none;
   font-family:Calibri, Verdana, Arial, sans-serif;
   font-weight:bolder;
-  #percentage > .font-size(14, 12);
+  #percentage > .font-size(18, 12);
+  line-height:130%;
   cursor:pointer;
-  #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
+  #gradient > .linear-double(#ee4e4e, #ee4e4e, #e60101);
   display:inline-block;
+  margin-right:10px;
 }
-
+.btn-nav {
+  #gradient > .linear-double(#1968b0, #1968b0, #0057a7);
+}
+.btn-login {
+  padding:0 8px;
+  #percentage > .font-size(14, 12);
+  line-height:110%;
+  #border > .radius(0.2em);
+}
 .sprite img { //collapse old buttons to a small height for dev.
   height:2em;
 }
