--- a/css/touch.less
+++ b/css/touch.less
@@ -1,20 +1,8 @@
 
 .touch_support() {
-  .nav-main li {
-    a {
-    padding-top:10px;
-    padding-bottom:10px;
-    }
-    margin-top:5px;
-    margin-bottom:5px;
-  }
-  .btn {
+  #maincontent .btn {
     margin-top:10px;
     margin-bottom:10px;
     padding:10px 1em;
-  }
-  #nav-secondary li a {
-    padding-top:10px;
-    padding-bottom:10px;
   }
 }
