--- a/css/buttons.less
+++ b/css/buttons.less
@@ -11,19 +11,26 @@
   #percentage > .font-size(18, 12);
   line-height:120%;
   cursor:pointer;
-  #gradient > .linear-double(#ee4e4e, #ee4e4e, #e60101);
+  #gradient > .linear-double(#1968b0, #1968b0, #0057a7);
   display:inline-block;
   margin-right:10px;
 }
-.btn-nav {
-  #gradient > .linear-double(#1968b0, #1968b0, #0057a7);
+.panel .btn {
+  margin-top:1em;
+}
+.btn-cta {
+  #gradient > .linear-double(#ee4e4e, #ee4e4e, #e60101);
 }
 .btn-login {
   padding:0 8px;
   #percentage > .font-size(14, 12);
   line-height:110%;
   #border > .radius(0.2em);
+  #gradient > .linear-double(#ee4e4e, #ee4e4e, #e60101);
 }
 .sprite img { //collapse old buttons to a small height for dev.
   height:2em;
+}
+.btn-read-more, .btn-close {
+  #percentage > .font-size(12, 12);
 }
