layout and full site JS

--- a/css/700px.less
+++ b/css/700px.less
@@ -50,6 +50,9 @@
         padding-bottom:11px;
         #gradient > .linear(#f2f5f8, #e5eaf1, #f2f5f8);
         #border > .radius(0.2em 0.2em 0 0);
+        a {
+          border-bottom:none;
+        }
       }
     }
   }
@@ -147,7 +150,7 @@
     }
   }
   .aside {
-    margin:50px 0;
+    margin-bottom:50px;
     overflow:hidden;
     .item {
       float:left;
