--- a/css/core.less
+++ b/css/core.less
@@ -79,6 +79,7 @@ a {
   border-bottom:1px solid #d5d9df;
   padding-top:30px;
   padding-bottom:30px;
+  margin-bottom:50px;
   .bdr-1, .bdr-2, .bdr-3, .bdr-4 {
     #border > .shadow(1px 1px 2px #d6dde7);
   }
