--- a/css/core.less
+++ b/css/core.less
@@ -211,6 +211,9 @@ a {
 .bg .wrap {
   #gradient > .linear-double(#ebebec, #fff, #ebebec);
 }
+.nav .wrap {
+  display:inherit;
+}
 
 .nowrap {
   border:1px solid #d5d9df;
@@ -397,9 +400,11 @@ ul.tabs {
     border:1px solid #d4dbe3;
     #gradient > .linear-double(#f2f5f8, #f2f5f8, #e4ebf1);
     clear:both;
-    padding-left:1em;
+    padding-left:0.5em;
     cursor:pointer;
     #border > .shadow(1px 1px 2px #d6dde7);
+    font-size:150%;
+    padding:0.25em 0 0.25em 0.5em;
   }
 }
 
