--- a/css/core.less
+++ b/css/core.less
@@ -80,7 +80,7 @@ a {
   padding-top:30px;
   padding-bottom:30px;
   margin-bottom:50px;
-  .bdr-1, .bdr-2, .bdr-3, .bdr-4 {
+  .bdr, .bdr-1, .bdr-2, .bdr-3, .bdr-4 {
     #border > .shadow(1px 1px 2px #d6dde7);
   }
   .bg {
@@ -122,6 +122,7 @@ a {
       text-decoration:none;
       color:#004ca0;
       border:1px solid #fff;
+      #border > .radius(0.2em);
     }
   }
 }
@@ -199,7 +200,7 @@ a {
   width:100%;
 }
 
-.bdr-1, .bdr-2, .bdr-3, .bdr-4 {
+.bdr, .bdr-1, .bdr-2, .bdr-3, .bdr-4 {
   border:1px solid #d6dde7;
 }
 
@@ -404,7 +405,10 @@ ul.tabs {
     cursor:pointer;
     #border > .shadow(1px 1px 2px #d6dde7);
     font-size:150%;
-    padding:0.25em 0 0.25em 0.5em;
+    padding:0.25em 0.5em 0.25em 0.5em;
+  }
+  .ui-arrow {
+    float:right;
   }
 }
 
