Further content changes and temp styles to get close to visual design.

--- a/css/700px.less
+++ b/css/700px.less
@@ -212,4 +212,6 @@
   #fullsite { display:inherit; }
   .wide-0, .wide-1 { display:inherit !important; }
   .narrow-0 { display:none !important; }
+  .accordian-h3 .read-more h3{background-color:#eaeaea; padding:5px 0}
+  .type-2 .panel {float:none}
 }
