nav main li sizes (fixed at px fro testing tomorrow) need to look at inheritance issues with ems, work out correct em sizes.

--- a/css/1000px.less
+++ b/css/1000px.less
@@ -1,6 +1,6 @@
 ﻿.min-width_1000px() {
   .nav-main li {
-    font-size:1.3333em;
+    font-size:16px;
     &.active {
     	padding-bottom:12px;
     }
