--- a/css/700px.less
+++ b/css/700px.less
@@ -39,7 +39,7 @@
     top:120px;
     margin-left:35px;
     li {
-      font-size:1em;
+      font-size:12px;
       width:auto;
       margin:0 10px 0 0;
       &:last-child {
