--- a/css/900px.less
+++ b/css/900px.less
@@ -1,6 +1,6 @@
 ﻿.min-width_920px() {
   .nav-main li {
-    font-size:1.16666em;
+    font-size:14px;
     &.active {
       padding-bottom:10px;
     }
